tests/NormalTests/paczka1/small_fuzzy/46243184.err
Error in line 2: S20 S20 84,5
Error in line 6: tPYGA4Djrn A874 79,2
